# DS-Lab-Failures-in-cellular-apoptosis

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  Mandalorians_prediction.csv  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: 1_Data_Exploration.ipynb  1_dimensionality_reduction.ipynb  1_distributions.ipynb  1_missing_values.ipynb  2_column_deletion.ipynb  2_normalization.ipynb  2_sampling.ipynb  3_autoencoder.ipynb  3_binary_encoding.ipynb  3_category_encoding.ipynb  3_dim_red_isomap.ipynb  3_dim_red_pca.ipynb  3_feature_importances.ipynb  3_geo_ids.ipynb  4_logistic_regression.ipynb  4_model_selection_johann.ipynb  4_prediction_analysis.ipynb  6_tuning.ipynb  binary_classificication_opt.ipynb  column_types.ipynb  eda.ipynb  exploration.ipynb  lunar_opt.ipynb  neural_network.ipynb  normalization.ipynb  rarely_occurring_categoricals.ipynb  test.ipynb  umap_rapids.ipynb
src/apopfail/: __init__.py  __main__.py  cleaning.py  compare.py  evaluate.py  model.py  neuralnet.py  occ.py
src/apopfail/utils/: loading.py  logging.py
src/dmgpred/: __init__.py  __main__.py  cleaning.py  column_types.py  evaluate.py  featurize.py  train.py  tune_XGBoost.py  tune_catboost_hyperopt.py  tune_catboost_optuna.py  tune_lgbm.py
src/dmgpred/tune/: __init__.py  catboost.py  lgbm.py  run_optimization.py  tune_catboost_hyperopt.py  tune_catboost_optuna.py  xgboost.py
src/dmgpred/utils/: eval.py  loading.py
tests/: test_main.py
