[project]
name = "earthquake-damage-prediction"
dynamic = ['version']
description = "Earthquake damage prediction task 1"
authors = [
    { name = "Isabelle Konrad", email = "uupor@student.kit.edu" },
    { name = "Johann Bläsche", email = "usqeb@student.kit.edu" },
    { name = "Moritz Mistol", email = "usort@student.kit.edu" },
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "shap>=0.45.1",
    "lightgbm>=4.3.0",
    "imbalanced-learn>=0.12.2",
    "xgboost>=2.0.3",
]

[tool.setuptools_scm]

[project.scripts]
dmgpred = "dmgpred.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "pdoc", "jupyter", "ruff"]

[tool.ruff]
line-length = 88
extend-exclude = ["dmgpred/__init__.py"]
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pydocstyle
    "D",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pandas related
    "PD",
]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
